--- a/styles/style.css
+++ b/styles/style.css
@@ -7,22 +7,23 @@
 
 .header{
    padding: 2%;
+   width: 120px;
 }
 .body{
-    height: 100vh;
-    ox-sizing: border-box;
+   // height: 100vh;
+    box-sizing: border-box;
 }
 
 .principal{
     display: flex;
-    justify-content: space-between;
-    padding: 10%;
+    justify-content:space-around;
+    
 }
 .principal__izquierda{
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-    width: 60%;
+    
 }
 .principal__izquierda_text{
    
@@ -30,6 +31,13 @@
 
 
 .principal__derecha{
-width: 40%;
+ display: flex;
+ flex-direction: column;
+ justify-content: space-between;
+}
 
+.principal__derecha{
+    height: 944px;
+    border: 2px  blue solid;
+    border-radius: 15px;
 }
