--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@
     font-size: 32px;
     line-height: 150%;
     padding: 0;
-    margin: 0%;
+    margin: 0%s;
 }
 
 .header__logo{
@@ -21,6 +21,7 @@
     margin-top: 50px;
     margin-left: 50px;
     gap: 70px;
+    margin-bottom: 2%;
     
 }
 
