--- a/styles/style.css
+++ b/styles/style.css
@@ -239,7 +239,7 @@
             background: transparent;
             position: relative;
             display: none;
-            text-align: justify;
+            text-align: center;
         }
        
 }
